--- a/webapp/view/RetentionRecords.view.xml
+++ b/webapp/view/RetentionRecords.view.xml
@@ -108,128 +108,119 @@
 											<layoutData>
 												<l:GridData span="L3 M4 S12"/>
 											</layoutData>
-										</Input>
+										</Input>		
 										<!---Contract Amount-->
 										<Label text="Contract Amount" width="100%">
 											<layoutData>
 												<l:GridData span="L3 M2 S12"/>
 											</layoutData>
 										</Label>
-										<Input width="100%" id="CntAmount" required="true" value="{ path:'POData>/RetenTransaction/ContractAmount', type: 'sap.ui.model.type.Float', formatOptions: {maxFractionDigits: 2, minFractionDigits: 2}}"
+										<Input width="100%" id="ContractAmount" required="true" value="{ path:'POData>/RetenTransaction/ContractAmount', type: 'sap.ui.model.type.Float', formatOptions: {maxFractionDigits: 2, minFractionDigits: 2}}"
 											valueHelpOnly="true" valueHelpRequest="handleValueHelpSupplier"
 											liveChange="fContractAmount" editable="false" >
 											<layoutData>
 												<l:GridData span="L3 M4 S12"/>
 											</layoutData>
-										</Input>
-										<!--Posting Date-->
-										<Label text="Posting Date" width="100%">
+										</Input>	
+										<!--DP Rate-->
+										<Label text="DP Rate" width="100%">
 											<layoutData>
 												<l:GridData span="L3 M2 S12"/>
 											</layoutData>
 										</Label>
-										<DatePicker id="DateFrom" valueFormat="yyyy-MM-dd" displayFormat="yyyy-MM-dd" change="handleChange" required="true"
-											value="{POData>/RetenTransaction/PostingDate}" editable="false" >
-											<layoutData>
-												<l:GridData span="L3 M4 S12"/>
-											</layoutData>
-										</DatePicker>
-										<!---Project Code-->
-										<Label text="Project Code" width="100%">
-											<layoutData>
-												<l:GridData span="L3 M2 S12"/>
-											</layoutData>
-										</Label>
-										<Input  width="100%" id="ProjCode" required="true" 
-										value="{POData>/RetenTransaction/ProjectCode}" editable="false" >
+										<Input width="100%" id="DPRate" required="true" value="{POData>/RetenTransaction/ProgressBIll}" editable="false" valueHelpOnly="true"
+											valueHelpRequest="handleValueHelpSupplier">
 											<layoutData>
 												<l:GridData span="L3 M4 S12"/>
 											</layoutData>
 										</Input>
-										<!---Progress BIll%-->
-										<Label text="Progress Bill%" width="100%">
+										<!--Progress Rate-->
+										<Label text="Progress Rate" width="100%">
 											<layoutData>
 												<l:GridData span="L3 M2 S12"/>
 											</layoutData>
 										</Label>
-										<Input  width="100%" id="ProgBill" required="true" 
-										value="{POData>/RetenTransaction/ProgressBIll}" editable="false" >
+										<Input width="100%" id="PrRate" required="true" value="{POData>/RetenTransaction/ProgressBIll}" editable="false" valueHelpOnly="true"
+											valueHelpRequest="handleValueHelpSupplier">
 											<layoutData>
 												<l:GridData span="L3 M4 S12"/>
 											</layoutData>
 										</Input>
-										<!---Retention Yes CWIP-->
-										<Label text="Retention Yes CWIP" width="100%">
-											<layoutData>
-												<l:GridData span="L3 M2 S12"/>
-											</layoutData>
-										</Label>
-										<Input  width="100%" id="RetYCwip" required="true" 
-										value="{ path:'POData>/RetenTransaction/RetenYCWIP', type: 'sap.ui.model.type.Float', formatOptions: {maxFractionDigits: 2, minFractionDigits: 2}}" editable="false" >
-											<layoutData>
-												<l:GridData span="L3 M4 S12"/>
-											</layoutData>
-										</Input>
-										<!---Retention No CWIP-->
-										<Label text="Retention No CWIP" width="100%">
-											<layoutData>
-												<l:GridData span="L3 M2 S12"/>
-											</layoutData>
-										</Label>
-										<Input  width="100%" id="RetNCwip" required="true" 
-										value="{ path:'POData>/RetenTransaction/RetenNCWIP', type: 'sap.ui.model.type.Float', formatOptions: {maxFractionDigits: 2, minFractionDigits: 2}}" editable="false" >
-											<layoutData>
-												<l:GridData span="L3 M4 S12"/>
-											</layoutData>
-										</Input>
-										<!---Gross Amount-->
+										<!--Gross Amount-->
 										<Label text="Gross Amount" width="100%">
 											<layoutData>
 												<l:GridData span="L3 M2 S12"/>
 											</layoutData>
 										</Label>
-										<Input  width="100%" id="GrossAmnt" required="true" 
-										value="{ path:'POData>/RetenTransaction/GrossAmount', type: 'sap.ui.model.type.Float', formatOptions: {maxFractionDigits: 2, minFractionDigits: 2}}" editable="false" >
+										<Input width="100%" id="GRAmount" required="true" value="{ path:'POData>/RetenTransaction/GrossAmount', type: 'sap.ui.model.type.Float', formatOptions: {maxFractionDigits: 2, minFractionDigits: 2}}" editable="false" valueHelpOnly="true"
+											valueHelpRequest="handleValueHelpSupplier">
 											<layoutData>
 												<l:GridData span="L3 M4 S12"/>
 											</layoutData>
-										</Input>
-										<!---Prorated Retention-->
-										<Label text="Prorated Retention" width="100%">
-											<layoutData>
-												<l:GridData span="L3 M2 S12"/>
-											</layoutData>
-										</Label>
-										<Input  width="100%" id="ProReten" required="true" 
-										value="{ path:'POData>/RetenTransaction/ProratedReten', type: 'sap.ui.model.type.Float', formatOptions: {maxFractionDigits: 2, minFractionDigits: 2}}" editable="false" >
-											<layoutData>
-												<l:GridData span="L3 M4 S12"/>
-											</layoutData>
-										</Input>
-										<!---Progress BIll Amount-->
-										<Label text="Progress Bill Amount" width="100%">
-											<layoutData>
-												<l:GridData span="L3 M2 S12"/>
-											</layoutData>
-										</Label>
-										<Input  width="100%" id="ProgBillAmnt" required="true" 
-										value="{ path:'POData>/RetenTransaction/ProgBillAmount', type: 'sap.ui.model.type.Float', formatOptions: {maxFractionDigits: 2, minFractionDigits: 2}}" editable="false" >
-											<layoutData>
-												<l:GridData span="L3 M4 S12"/>
-											</layoutData>
-										</Input>
-										<!---Prorated DP-->
+										</Input>	
+										<!--Prorated DP-->
 										<Label text="Prorated DP" width="100%">
 											<layoutData>
 												<l:GridData span="L3 M2 S12"/>
 											</layoutData>
 										</Label>
-										<Input  width="100%" id="ProDP" required="true" 
-										value="{ path:'POData>/RetenTransaction/ProratedDP', type: 'sap.ui.model.type.Float', formatOptions: {maxFractionDigits: 2, minFractionDigits: 2}}" editable="false" >
+										<Input width="100%" id="ProDP" required="true" value="{ path:'POData>/RetenTransaction/ProratedDP', type: 'sap.ui.model.type.Float', formatOptions: {maxFractionDigits: 2, minFractionDigits: 2}}" editable="false" valueHelpOnly="true"
+											valueHelpRequest="handleValueHelpSupplier">
 											<layoutData>
 												<l:GridData span="L3 M4 S12"/>
 											</layoutData>
-										</Input>
+										</Input>	
+										<!--Prorated Retention-->
+										<Label text="Prorated Retention" width="100%">
+											<layoutData>
+												<l:GridData span="L3 M2 S12"/>
+											</layoutData>
+										</Label>
+										<Input width="100%" id="ProReten" required="true" value="{ path:'POData>/RetenTransaction/ProratedReten', type: 'sap.ui.model.type.Float', formatOptions: {maxFractionDigits: 2, minFractionDigits: 2}}" editable="false" valueHelpOnly="true"
+											valueHelpRequest="handleValueHelpSupplier">
+											<layoutData>
+												<l:GridData span="L3 M4 S12"/>
+											</layoutData>
+										</Input>	
+										<!---DP Amount-->
+										<Label text="DP Amount" width="100%">
+											<layoutData>
+												<l:GridData span="L3 M2 S12"/>
+											</layoutData>
+										</Label>
+										<Input width="100%" id="DpAmount" required="true" value="{ path:'POData>/RetenTransaction/GrossAmount', type: 'sap.ui.model.type.Float', formatOptions: {maxFractionDigits: 2, minFractionDigits: 2}}"
+											valueHelpOnly="true" valueHelpRequest="handleValueHelpSupplier"
+											liveChange="fContractAmount" editable="false" >
+											<layoutData>
+												<l:GridData span="L3 M4 S12"/>
+											</layoutData>
+										</Input>	
+										<!---DP Witholding Tax-->
+										<Label text="Witholding Tax:" width="100%">
+											<layoutData>
+												<l:GridData span="L3 M2 S12"/>
+											</layoutData>
+										</Label>
+										<Input width="100%" id="WTax" required="true" value="{ path:'POData>/RetenTransaction/WTX', type: 'sap.ui.model.type.Float', formatOptions: {maxFractionDigits: 2, minFractionDigits: 2}}"
+											valueHelpOnly="true" valueHelpRequest="handleValueHelpSupplier"
+											liveChange="fContractAmount" editable="false" >
+											<layoutData>
+												<l:GridData span="L3 M4 S12"/>
+											</layoutData>
+										</Input>	
+										<!---Amount to Pay-->
+										<Label text="Amount To Pay:" width="100%">
+											<layoutData>
+												<l:GridData span="L3 M2 S12"/>
+											</layoutData>
+										</Label>
+										<Input width="100%" id="AmntPay" required="true" value="{ path:'POData>/RetenTransaction/DPAmount', type: 'sap.ui.model.type.Float', formatOptions: {maxFractionDigits: 2, minFractionDigits: 2}}"
+											valueHelpOnly="true" valueHelpRequest="handleValueHelpSupplier"
+											liveChange="fContractAmount" editable="false" >
+											<layoutData>
+												<l:GridData span="L3 M4 S12"/>
+											</layoutData>
+										</Input>					
 									</f:SimpleForm>
 								</VBox>
 							</IconTabFilter>
