--- a/webapp/view/ContractReport.view.xml
+++ b/webapp/view/ContractReport.view.xml
@@ -20,8 +20,8 @@
 							<Toolbar>
 								<content>
 									<Button id="btnRptExport" text="Export" press="Export" icon="sap-icon://pdf-attachment" visible="{buttons>/buttons/btnRptExport}" />
-									<Button id="btnRptGenerate" text="Generate" tooltip="Add" press="Generate" icon="sap-icon://process" visible="{buttons>/buttons/btnRptGenerate}" />
-									<Button id="btnRptPrint" text="Print" tooltip="Print" press="Print" icon="sap-icon://print" visible="{buttons>/buttons/btnRptPrint}" />
+									<Button id="btnRptGenerate" text="Generate" tooltip="Add" press="fGenerate" icon="sap-icon://process" visible="{buttons>/buttons/btnRptGenerate}" />
+									<Button id="btnRptPrint" text="Print" tooltip="Print" press="fPrint" icon="sap-icon://print" visible="{buttons>/buttons/btnRptPrint}" />
 								</content>
 							</Toolbar>
 								<VBox class="sapUiResponsiveMargin">
@@ -74,6 +74,7 @@
 										</DatePicker>	
 									</f:SimpleForm>
 								</VBox>
+
 							</IconTabFilter>
 						</items>
 					</IconTabBar>
