--- a/webapp/view/Login.view.xml
+++ b/webapp/view/Login.view.xml
@@ -1,6 +1,12 @@
- <mvc:View id="Login" controllerName="com.apptech.app-retention.controller.Login"
-xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-	xmlns="sap.m" xmlns:f="sap.ui.layout.form" xmlns:core="sap.ui.core" xmlns:l="sap.ui.layout">
+ <mvc:View id="Login" 
+controllerName="com.apptech.app-retention.controller.Login"
+xmlns:mvc="sap.ui.core.mvc" 
+displayBlock="true"
+xmlns="sap.m" 
+xmlns:f="sap.ui.layout.form" 
+xmlns:core="sap.ui.core" 
+xmlns:l="sap.ui.layout"
+>
 	<Shell id="shell">
 		<App id="app">
 			<pages>
