[adj] Contract Report Hide Remove Export Button
[adj] Contract Report Hide Remove Export Button
[adj] Contract Report Naming

--- a/webapp/view/ContractReport.view.xml
+++ b/webapp/view/ContractReport.view.xml
@@ -19,7 +19,7 @@
 							<IconTabFilter id="tab1" text="Report">
 							<Toolbar>
 								<content>
-									<Button id="btnRptExport" text="Export" press="Export" icon="sap-icon://pdf-attachment" visible="{buttons>/buttons/btnRptExport}" />
+									<!-- <Button id="btnRptExport" text="Export" press="Export" icon="sap-icon://pdf-attachment" visible="{buttons>/buttons/btnRptExport}" /> -->
 									<Button id="btnRptGenerate" text="Generate" tooltip="Add" press="fGenerate" icon="sap-icon://process" visible="{buttons>/buttons/btnRptGenerate}" />
 									<Button id="btnRptPrint" text="Print" tooltip="Print" press="fPrint" icon="sap-icon://print" visible="{buttons>/buttons/btnRptPrint}" />
 									<Button id="btnRptClear" text="Clear" tooltip="clear" press="fClear" icon="sap-icon://clear-filter" />
